@@ -374,6 +374,7 @@ void ConfigDialogue::SetProperties()
   m_getFont->SetToolTip(_("Font used for display in document."));
   m_getMathFont->SetToolTip(_("Font used for displaying math characters in document."));
   m_changeAsterisk->SetToolTip(_("Use centered dot and Minus, not Star and Hyphen"));
+  m_latin2Greek->SetToolTip(_("Change the text \"alpha\" and \"beta\" to the corresponding greek letter?"));
   m_defaultPort->SetToolTip(_("The default port used for communication between Maxima and wxMaxima."));
   m_undoLimit->SetToolTip(
           _("Save only this number of actions in the undo buffer. 0 means: save an infinite number of actions."));
@@ -500,6 +501,7 @@ void ConfigDialogue::SetProperties()
   m_showLength->SetSelection(configuration->ShowLength());
   m_autosubscript->SetSelection(configuration->GetAutosubscript_Num());
   m_changeAsterisk->SetValue(configuration->GetChangeAsterisk());
+  m_latin2Greek->SetValue(configuration->Latin2Greek());
   m_enterEvaluates->SetValue(enterEvaluates);
   m_saveUntitled->SetValue(saveUntitled);
   m_openHCaret->SetValue(configuration->GetOpenHCaret());
@@ -549,7 +551,7 @@ wxPanel *ConfigDialogue::CreateWorksheetPanel()
   wxPanel *panel = new wxPanel(m_notebook, -1);
 
   wxFlexGridSizer *grid_sizer = new wxFlexGridSizer(10, 2, 5, 5);
-  wxFlexGridSizer *vsizer = new wxFlexGridSizer(29, 1, 5, 5);
+  wxFlexGridSizer *vsizer = new wxFlexGridSizer(30, 1, 5, 5);
 
   wxStaticText *pw = new wxStaticText(panel, -1, _("Default plot size for new maxima sessions:"));
   wxBoxSizer *PlotWidthHbox = new wxBoxSizer(wxHORIZONTAL);
@@ -635,6 +637,9 @@ wxPanel *ConfigDialogue::CreateWorksheetPanel()
 
   m_changeAsterisk = new wxCheckBox(panel, -1, _("Use centered dot character for multiplication"));
   vsizer->Add(m_changeAsterisk, 0, wxALL, 5);
+
+  m_latin2Greek = new wxCheckBox(panel, -1, _("Change names of greek letters to greek letters"));
+  vsizer->Add(m_latin2Greek, 0, wxALL, 5);
 
   m_keepPercentWithSpecials = new wxCheckBox(panel, -1, _("Keep percent sign with special symbols: %e, %i, etc."));
   vsizer->Add(m_keepPercentWithSpecials, 0, wxALL, 5);
@@ -1183,6 +1188,7 @@ void ConfigDialogue::WriteSettings()
   configuration->SetAutosubscript_Num(m_autosubscript->GetSelection());
   config->Write(wxT("fixedFontTC"), m_fixedFontInTC->GetValue());
   configuration->SetChangeAsterisk(m_changeAsterisk->GetValue());
+  configuration->Latin2Greek(m_latin2Greek->GetValue());
   config->Write(wxT("enterEvaluates"), m_enterEvaluates->GetValue());
   config->Write(wxT("saveUntitled"), m_saveUntitled->GetValue());
   configuration->SetOpenHCaret(m_openHCaret->GetValue());
