@@ -1,4 +1,6 @@
 Current:
+  * The names of greek letters are no more converted to greek letters in variable
+    names by default.
   * Smarter Formatting of asterisk and hyphen.
   * An automatic per-commit Windows Build for Appveyor.
   * Always recalculate the worksheet size when needed.
